--- a/src/components/MovieDetails/MovieDetails.module.scss
+++ b/src/components/MovieDetails/MovieDetails.module.scss
@@ -5,14 +5,30 @@
   padding: 20px;
   background-color: #f0f0f0;
   color: #333;
+  .backButton {
+    align-self: flex-start;
+    padding: 10px 20px;
+    background-color: #e31c25;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    transition: background-color 0.3s;
 
-  h2, h3 {
-    color: #e31c25; 
+    &:hover {
+      background-color: darken(#e31c25, 10%);
+    }
+  }
+  h2,
+  h3 {
+    color: #e31c25;
   }
 
   img {
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
   }
 
@@ -27,6 +43,6 @@
   }
 
   .ratings {
-    margin: 20px 0;
+    padding: 10px 20px;
   }
 }
