--- a/src/components/PrivateRoute/PrivateRoute.module.scss
+++ b/src/components/PrivateRoute/PrivateRoute.module.scss
@@ -9,13 +9,60 @@
     position: fixed;
     overflow-y: auto;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    transition: width 0.3s ease;
+    z-index: 1000;
+    background-color: #f8f8f8;
+
+    @media (max-width: 768px) {
+      width: 20px;
+    }
+  }
+
+  .open {
+    width: 250px;
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
 
   .content {
     flex-grow: 1;
-    margin-left: 250px;
     overflow-y: auto;
     height: 100vh;
     padding: 1rem;
+  }
+
+  .toggleButton {
+    position: absolute;
+    top: 10px;
+    right: -10px;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 1001;
+    font-size: 1.5rem;
+    background-color: transparent;
+    border: none;
+    color: #333;
+    transition: transform 0.3s ease;
+    outline: none;
+
+    &:hover {
+      color: #e31c25;
+      transform: scale(1.1);
+    }
+
+    @media (min-width: 769px) {
+      display: none;
+    }
+  }
+
+  .contentInner {
+    transition: margin-left 0.3s ease;
+    margin-left: 0;
+    padding-left: 1rem;
+    @media (min-width: 769px) {
+      margin-left: 250px;
+    }
   }
 }
