--- a/src/components/WatchList/Watchlist.module.scss
+++ b/src/components/WatchList/Watchlist.module.scss
@@ -2,6 +2,38 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
+
+  .watchlistName {
+    display: flex;
+    align-items: center;
+    padding: 1rem 0rem;
+    h2 {
+      margin-right: 10px;
+    }
+    input{
+      padding: 4px;
+      border-radius: 8px;
+      font-size: large;
+    }
+    .save {
+      margin-left: 10px;
+      background-color: #e31c25;
+      padding: 4px;
+      border-radius: 8px;
+      color: #fff;
+    }
+    button {
+      background-color: transparent;
+      border: none;
+      font-size: 1.2em;
+      cursor: pointer;
+      transition: color 0.3s ease-in-out;
+
+      &:hover {
+        color: #e31c25;
+      }
+    }
+  }
 }
 
 .movieGrid {
@@ -18,6 +50,7 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
+  transition: box-shadow 0.3s ease-in-out;
 
   &:hover {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -28,6 +61,8 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .movieInfo {
@@ -51,6 +86,7 @@
     border-radius: 4px;
     margin-top: 10px;
     cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
 
     &:hover {
       background-color: #c41c1c;
